edition = "2023";  // successor to proto2 and proto3

package storage;

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";

enum OperationStatus {
  FAIL = 0;
  PASS = 1;
}
